[gd_scene load_steps=10 format=2]

[ext_resource path="res://Escenas/SegundoMenu/SegundoMenu.gd" type="Script" id=1]
[ext_resource path="res://Asset/mainmenu.png" type="Texture" id=2]
[ext_resource path="res://Asset/UI/boton_der.png" type="Texture" id=3]
[ext_resource path="res://Asset/menu/musica_menu.ogg" type="AudioStream" id=4]
[ext_resource path="res://Asset/presentacion/logo_unpaz.png" type="Texture" id=5]
[ext_resource path="res://Asset/UI/boton_salir_normal.png" type="Texture" id=6]
[ext_resource path="res://Asset/UI/boton_salir_presionado.png" type="Texture" id=7]
[ext_resource path="res://Asset/menu/boton_sonido_activo.png" type="Texture" id=8]
[ext_resource path="res://Asset/menu/boton_sonido_desactivado.png" type="Texture" id=9]

[node name="SegundoMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 513.872, 302.467 )
scale = Vector2( 0.538958, 0.476889 )
texture = ExtResource( 2 )

[node name="NuevaPartida" type="TextureButton" parent="."]
margin_left = 416.153
margin_top = 382.589
margin_right = 1696.15
margin_bottom = 1421.59
texture_normal = ExtResource( 3 )

[node name="ReproductorMusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.264
autoplay = true

[node name="UNPAZ" type="Sprite" parent="."]
position = Vector2( 442.083, 90.4702 )
scale = Vector2( 0.329283, 0.307929 )
texture = ExtResource( 5 )

[node name="Salir" type="TextureButton" parent="."]
margin_left = 1.58669
margin_top = 437.922
margin_right = 305.587
margin_bottom = 774.922
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="sonido" type="TextureButton" parent="."]
margin_left = 818.724
margin_top = 418.882
margin_right = 1294.72
margin_bottom = 831.882
rect_scale = Vector2( 0.5, 0.5 )
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[connection signal="pressed" from="NuevaPartida" to="." method="_on_NuevaPartida_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="sonido" to="." method="_on_sonido_pressed"]
